Fix mobile overflow, add 524px breakpoint, and refactor signup layout

--- a/css/style.css
+++ b/css/style.css
@@ -16,10 +16,16 @@ div {
 
 
 /* some basic css resetting */
-body { 
-    margin: 0; 
-    box-sizing: border-box; 
+html {
+    overflow-x: hidden;
+}
+
+body {
+    margin: 0;
+    box-sizing: border-box;
     z-index: 5;
+    overflow-x: hidden;
+    max-width: 100vw;
 }
   
 a { text-decoration: none; color: var(--lightcream); }
@@ -867,6 +873,14 @@ p.footertitle span {
     .copyright    {order:4;}
     .footerspacer {order:5;}
           
+}
+
+@media only screen and (max-width: 524px) {
+    .home-signup {
+        width: 400px;
+        padding: 10px 220px;
+        background-position: center 37px;
+    }
 }
 
 @media only screen and (max-width: 360px) { /* moblie for assignment 360px x 640px */
